objects/ESC_RecordTypeNameFormula__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ESC_Enhancement_Request_Read_Only__c</fullName>
        <label>Enhancement Request(Read Only)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Enhancement_Request__c</fullName>
        <label>Enhancement Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Feedback_Read_Only__c</fullName>
        <label>Feedback(Read Only)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Feedback__c</fullName>
        <label>Feedback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Hot_Topic_Read_Only__c</fullName>
        <label>Hot Topic (Read Only)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Hot_Topic__c</fullName>
        <label>Hot Topic</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Incident_Read_Only__c</fullName>
        <label>Incident(Read Only)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Incident__c</fullName>
        <label>Incident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Inquiry_Read_Only__c</fullName>
        <label>Inquiry(Read Only)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Inquiry__c</fullName>
        <description>This will hold the record type Id for case Inquiry</description>
        <label>Inquiry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_RequestForService_Read_Only__c</fullName>
        <label>RequestForService(Read Only)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_RequestForService__c</fullName>
        <label>RequestForService</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Request_for_Action_Read_Only__c</fullName>
        <label>Request for Action (Read Only)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Request_for_Action__c</fullName>
        <label>Request for Action</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>RecordTypeNameFormula</label>
</CustomObject>